--- a/api/templates/Main-Dashboard.html
+++ b/api/templates/Main-Dashboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href={{ url_for('static', filename='nicepage.css') }} media="screen">
 <link rel="stylesheet" href={{ url_for('static', filename='Main-Dashboard.css') }} media="screen">
     <script class="u-script" type="text/javascript" src={{ url_for('static', filename="jquery.js") }} defer=""></script>
-    <script class="u-script" type="text/javascript" src={{ url_for('static', filename="nicepage.js") }} defer=""></script>
+    <script class="u-script" type="text/javascript" src={{ url_for('static', filename="nicepage1.js") }} defer=""></script>
     <meta name="generator" content="Nicepage 4.12.21, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     
